# flext-tap-ldif

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Makefile.build  README.md  pyproject.toml
docs/: index.md
examples/: README.md
scripts/: README.md
src/flext_tap_ldif/: __init__.py  __version__.py  config.py  exceptions.py  ldif_processor.py  streams.py  tap.py  typings.py
src/flext_tap_ldif/infrastructure/: di_container.py
src/tap_ldif/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_tap.py
